# backend/swagger/rest-quality-api-flat-api.yaml
@@ -76,6 +76,62 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/ApplicationError'
+  /apis/{id}/settings:
+    put:
+      summary: Update the Settings Set of an existing API
+      tags:
+        - APIs API
+      parameters:
+        - name: id
+          in: path
+          type: string
+          format: uuid
+          required: true
+        - name: settings-id
+          in: body
+          schema:
+            $ref: '#/definitions/SettingsId'
+      responses:
+        200:
+          description: Returned Documents
+          schema:
+            $ref: '#/definitions/SettingsId'
+        404:
+          description: API ID or Settings ID not found
+          schema:
+            $ref: '#/definitions/ApplicationError'
+        500:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/ApplicationError'
+  /apis/{id}/title:
+    put:
+      summary: Change the title of an API
+      tags:
+        - APIs API
+      parameters:
+        - name: id
+          in: path
+          type: string
+          format: uuid
+          required: true
+        - name: title
+          in: body
+          schema:
+            $ref: '#/definitions/ApiTitle'
+      responses:
+        200:
+          description: New API title
+          schema:
+            $ref: '#/definitions/ApiTitle'
+        404:
+          description: Given API ID not found
+          schema:
+            $ref: '#/definitions/ApplicationError'
+        500:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/ApplicationError'
   /reports:
     post:
       summary: Create a new report
@@ -264,6 +320,9 @@ definitions:
   Api:
     type: object
     properties:
+      title:
+        type: string
+        example: Petstore API
       api-id:
         type: string
         format: uuid
@@ -277,6 +336,12 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/VersionRequest'
+  ApiTitle:
+    type: object
+    properties:
+      title:
+        type: string
+        example: Petstore API
   VersionRequest:
     type: object
     properties:
@@ -450,6 +515,13 @@ definitions:
         items:
           type: string
           example: "123"
+  SettingsId:
+    type: object
+    properties:
+      id:
+        type: string
+        format: uuid
+        example: '3efc7632-e833-40cd-b002-abdfaf426e6c'
   Swagger:
     type: object
     example: {"swagger":"2.0","info":{"version":"1.0.0","title":"Swagger Petstore","description":"A sample API that uses a petstore as an example to demonstrate features in the swagger-2.0 specification","termsOfService":"http://swagger.io/terms/","contact":{"name":"Swagger API Team"},"license":{"name":"MIT"}},"host":"petstore.swagger.io","basePath":"/api","schemes":["http"],"consumes":["application/json"],"produces":["application/json"],"paths":{"/pets":{"get":{"description":"Returns all pets from the system that the user has access to","produces":["application/json"],"responses":{"200":{"description":"A list of pets.","schema":{"type":"array","items":{}}}}}}},"definitions":{"Pet":{"type":"object","required":["id","name"],"properties":{"id":{"type":"integer","format":"int64"},"name":{"type":"string"},"tag":{"type":"string"}}}}}
